# feincms-oembed

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  admin.py  contents.py  models.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
feincms_oembed/: __init__.py  admin.py  contents.py  models.py  providers.py
feincms_oembed/locale/de/LC_MESSAGES/: django.mo  django.po
feincms_oembed/locale/es/LC_MESSAGES/: django.mo  django.po
feincms_oembed/migrations/: 0001_initial.py
feincms_oembed/templatetags/: oembed.py
tests/testapp/: models.py  settings.py  test_admin.py  urls.py
tests/testapp/migrate/page/: 0001_initial.py
