[metadata]
name = feincms-oembed
version = attr: feincms_oembed.__version__
description = OEmbed anything.
author = FEINHEIT GmbH
author_email = dev@feinheit.ch
url = https://github.com/feincms/feincms-oembed/
license = BSD License
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    coverage
    feincms>=22.0

[coverage:run]
branch = True
include =
    *oembed*
omit =
    *migrations*
    *migrate*
    *tests*
    *.tox*
